syntax = "proto3";

import "google/protobuf/struct.proto";

message ValueMessage {
  google.protobuf.NullValue nullValue = 1;
}
